# llm-code-refinery

./: EXPLAINER.md  HYPOTHESIS_RESULTS.md  README.md  experiment_data.csv  hypothesis_test_results.txt  hypothesis_tests.py  main.py  measure.py  output-0.txt  output-1.txt  power-analysis.ipynb  pyproject.toml  summarize.py  timing_results.csv
programs/: 1_3_inf_1.py  1_3_inf_2.py  1_8_inf_1.py  1_8_inf_2.py  1_inf_120_1.py  1_inf_120_2.py  1_inf_60_1.py  1_inf_60_2.py  2_3_inf_1.py  2_3_inf_2.py  2_8_inf_1.py  2_8_inf_2.py  2_inf_120_1.py  2_inf_120_2.py  2_inf_60_1.py  2_inf_60_2.py  3_3_inf_1.py  3_3_inf_2.py  3_8_inf_1.py  3_8_inf_2.py  3_inf_120_1.py  3_inf_120_2.py  3_inf_60_1.py  3_inf_60_2.py
